objects/APTSECOM_Store_Price_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>APTSECOM_Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTSECOM_Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>% Discount Off List</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Base Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTSECOM_Category_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Hierarchy</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Store Price Adjustments</relationshipLabel>
        <relationshipName>Store_Price_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTSECOM_Store__c</fullName>
        <label>Store</label>
        <referenceTo>APTSECOM_Store__c</referenceTo>
        <relationshipLabel>Store Price Adjustments</relationshipLabel>
        <relationshipName>Store_Price_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Store Price Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTSECOM_Store__c</columns>
        <columns>APTSECOM_Category_Hierarchy__c</columns>
        <columns>APTSECOM_Adjustment_Amount__c</columns>
        <columns>APTSECOM_Adjustment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Store Price Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Price Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>